# thought_virus

./: .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  Readme.md  main.py  pyproject.toml
experiments/Llama-3.1-8B-Instruct/: base_logprobs.csv  run_parallel_conversations.sh  top_10_number_concept.csv
experiments/Qwen2.5-7B-Instruct/: README.md  base_logprobs.csv  number_concept_logprobs.csv  run_parallel_conversations.sh
experiments/conversation_bias_detection/: config.py  extract_for_review.py  models.py  regex_detector.py  report.py  review_matches.py  run_detection.py  run_detection.sh  seed_level_stats.py
experiments/misalignment/: analyse_results.py  dataset_to_llm.py  experiment_config.py  fix_csv_files.py  get_accuracy_rates_conversations.py  get_accuracy_rates_conversations_FIXED.py  get_base_accuracy.py  get_top10_indices.py  run_parallel_accuracy.sh  run_parallel_conversations.sh  top10_numbers.csv  top_10_number_concept.csv
experiments_with_old_conversations/Qwen2.5-7B-Instruct/: number_concept_logprobs.csv  top_10_number_concept.csv
reference/: owl_in_the_numbers.txt
result_analysis/: README.md  plot_frequency_bars.py  plot_logprob_bars.py
runs/1/: Readme.md  example_run.ipynb
runs/10/: README.md  (+1 more)
runs/11/: README.md  (+1 more)
src/: __init__.py  compute_base_frequencies.py  compute_base_logprobs.py  config.py  data_models.py  experiment.py  frequency_analyzer.py  generate_conversation_single_seed.py  logprob_analyzer.py  multi_agent.py  run_analysis.py  storage.py  subliminal_token_analyzer.py  test.ipynb  utils.py
(+3122 files in other folders)
