[project]
name = "influence-animal-numbers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.2.0",
    "dotenv>=0.9.9",
    "huggingface-hub>=0.35.3",
    "ipykernel>=7.0.0",
    "ipywidgets>=8.1.7",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.0",
    "vllm>=0.11.0",
]
